--- a/src/index.css
+++ b/src/index.css
@@ -771,6 +771,10 @@
     height: 100%;
   }
 
+  .h-80p {
+    height: 80%;
+  }
+
   .h-px {
     height: 1px;
   }
@@ -1518,6 +1522,7 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
+  
 
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
